--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'androidx.navigation.safeargs'
+
+    // Google Mobile Services
+    apply plugin: 'com.google.gms.google-services'
+
+    // Safe Args
+    apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 29
@@ -34,18 +38,23 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Material
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 
+    // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    // Room
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
 
+    // Navigation
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
 
+    // Firebase
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-firestore:21.5.0'
 }
