--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,11 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
+
+        // Google Mobile Services
         classpath 'com.google.gms:google-services:4.3.3'
+
+        // Safe Args
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
